<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_stereo_sim</name>
  <version>0.1.0</version>
  <description>TurtleBot3 Waffle Gazebo launch and model with an Intel RealSense R200 RGB/depth camera configuration.</description>
  <maintainer email="maintainer@example.com">tanishi-robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
